# rust-experiments

./: .gitmodules
.github/workflows/: build.yml
exec-capture-output/: Cargo.toml  README.md
exec-capture-output/src/: app.rs  main.rs
