[build]
target = "x86_64-unknown-linux-musl"

[package]
name = "exec-capture-output"
version = "0.1.0"
authors = ["Andrew Bradley <cspotcode@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
stderrlog = "0.4"
structopt = "0.3"
anyhow = "1.0.31"
faccess = "0.2.3"
pty = "0.2"
which = "4.0.2"
tokio = { version = "0.3", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

# Uncomment to sacrifice Drop-on-panic cleanup and std::panic::catch_unwind
# for ~24K space saving
#panic = 'abort'
